Minor test fixes
svn path=/trunk/; revision=30276


Former-commit-id: 1d3cb62d0a2c7a97ac6e2156d7f26eac4baaefd8